--- a/golangci-lint.yml
+++ b/golangci-lint.yml
@@ -246,7 +246,11 @@ issues:
 
   # Excluding configuration per-path, per-linter, per-text and per-source
   exclude-rules:
-
+  - path: export_test.go
+    linters:
+    - gochecknoglobals
+    - unused
+    - deadcode
   # Independently from option `exclude` we use default exclude patterns,
   # it can be disabled by this option. To list all
   # excluded by default patterns execute `golangci-lint run --help`.
